--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "react-intersection-observer": "^8.31.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "saas": "^1.0.0", 
+    "saas": "^1.0.0",
     "styled-components": "^5.2.1",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "fsevents": "^2.3.2"
   },
   "scripts": {
     "start": "craco start",
