--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-scripts": "4.0.3",
     "saas": "^1.0.0",
     "styled-components": "^5.2.1",
-    "web-vitals": "^1.1.0",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "craco start",
